fix for #455: added missing languages

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -131,6 +131,8 @@ de:
         spa: "Spanisch - español"
         tha: "Thai - ภาษาไทย"
         bul: "Bulgarisch - български"
+        ron: "Rumänisch - română"
+        sqi: "Albanisch - Shqipja"
         kur: "Kurdisch - کوردی"
         srp: "Serbisch - српски"
         amh: "Amharisch - አማርኛ"
@@ -145,6 +147,7 @@ de:
         fas: "Persisch (Farsi) - فارسی"
         tam: "Tamil - தமிழ்"
         urd: "Urdu - اردو"
+        mul: "weitere Sprachen auf Anfrage"
         aze: "Aserbaidschanisch - Azərbaycan"
         ell: "Griechisch - ελληνικά"
         hin: "Hindi - हिन्दी"
@@ -157,6 +160,20 @@ de:
         "150": "Deutsche Gebärdensprache"
         lav: "Lettisch - latviešu"
         lit: "Litauisch - lietuvių"
+        kik: "Kikuyu - Gĩkũyũ"
+        zho: "Chinesisch - 普通话 / 普通話"
+        swa: "Swahili - Kiswahili"
+        luo: "Luo - Dholuo"
+        ltz: "Luxemburgisch - Lëtzebuergesch"
+        nor: "Norwegisch - Norsk"
+        swe: "Schwedisch - svenska"
+        snk: "Soninke - Soninkanxaane"
+        tgk: "Tadschikisch - тоҷикӣ / تاجیکی"
+        tel: "Telugu - తెలుగు"
+        tuk: "Turkmenisch - Türkmençe / Tүркменче"
+        uzb: "Usbekisch - Oʻzbek tili"
+        bel: "Weißrussisch - беларуская мова"
+        zza: "Zaza - Zazaki / Kırmancki"
 
       opening_section:
         heading: "Wann kannst du das machen?"
