--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,9 +1,9 @@
 # Please see ./README.md for more information on I18n styles and structure.
 de:
   conf: # translations used for app-internal things
-    current_location: 'Mein Standort'
-    default_location: 'Berlin'
-    default_latlng: '52.520007,13.404954'
+    current_location: "Mein Standort"
+    default_location: "Berlin"
+    default_latlng: "52.520007,13.404954"
 
   js: # translations used in JavaScript. I18n-JS forces them to be located here.
     geolocation:
@@ -12,18 +12,21 @@ de:
       error: Standort konnte nicht gefunden werden. Bitte manuell eingeben.
     location_required: |
       Bitte gib einen Ort an wo du nach einem Hilfsangebot suchen möchtest.
-    autocomplete_footer: Alle %{results} Suchergebnisse für '%{query}'
+    autocomplete_footer: "Alle %{results} Suchergebnisse für „%{query}“"
     map_info_window_multiple:
-      title: 'Mehrere Angebote'
-      text: 'Es wurden mehrere Ergebnisse für diesen Marker gefunden.'
-      anchor: 'Alle ansehen >>'
+      title: "Mehrere Angebote"
+      text: "Es wurden mehrere Ergebnisse für diesen Marker gefunden."
+      anchor: "Alle ansehen >>"
     cookie_warning_html: |
       Cookies helfen uns beim Bereitstellen dieser Website. Durch das Nutzen der
       Website erklären Sie sich einverstanden, dass wir Cookies setzen.
       <a href="/datenschutzhinweise">Mehr</a>.
-    more_filter_options: 'Mehr Filter anzeigen'
-    less_filter_options: 'Weniger Filter anzeigen'
-    mobile_filter: 'Ergebnisse filtern'
+    more_filter_options: "Mehr Filter anzeigen"
+    less_filter_options: "Weniger Filter anzeigen"
+    lang_list_toggle:
+      more: "Mehr Sprachen zeigen"
+      less: "Weniger Sprachen zeigen"
+    mobile_filter: "Ergebnisse filtern"
     ajax_error:
       error: "Suchfehler"
       message: |
