--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -1,7 +1,9 @@
 de:
   pages:
     home:
-      title: "Unterstützungsangebote für Kinder, Jugendliche und Familien"
+      title:
+        family: "Unterstützungsangebote für Kinder, Jugendliche und Familien"
+        refugees: "Unterstützungsangebote für Flüchtlinge"
       how:
         heading: "Wie funktioniert clarat?"
         text: |
