--- a/config/locales/views/emails/ar.yml
+++ b/config/locales/views/emails/ar.yml
@@ -2,10 +2,10 @@ ar:
   emails:
     subscribe:
       success_html: |
-        Du hast dich erfolgreich für Benachrichtigungen zu Angeboten mit deiner
-        Email-Adresse angemeldet.
-        (<a href="%{unsubscribe_href}">wieder abmelden</a>)
+        لقد قمت بتسجيل نفسك بنجاح للحصول على إشعارات عن عروض
+         على  الإيميل الخاص بك
+        (<a href="%{unsubscribe_href}">إلغاء التسجيل</a>)
     unsubscribe:
       success_html: |
-        Du hast dich erfolgreich von weiteren Benachrichtigungen abgemeldet.
-        (<a href="%{subscribe_href}">wieder anmelden</a>)
+        لقد قمت بنجاح بإلغاء تسجيلك من الحصول على إشعارات أخرى
+        (<a href="%{subscribe_href}">إعادة التسجيل</a>)
