--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,84 +1,83 @@
 # Please see ./README.md for more information on I18n styles and structure.
 ar:
   conf: # translations used for app-internal things
-    current_location: 'Mein Standort'
-    default_location: 'Berlin'
+    current_location: 'موقعي'
+    default_location: 'برلين'
     default_latlng: '52.520007,13.404954'
 
   js: # translations used in JavaScript. I18n-JS forces them to be located here.
     geolocation:
-      get: Benutze meinen Standort!
-      waiting: Suche Standort... Möglicherweise musst du dies erst erlauben.
-      error: Standort konnte nicht gefunden werden. Bitte manuell eingeben.
+      get: استخدم موقعي !
+      waiting:   البحث عن موقع. ربما عليك أن تسمح بهذا أولا
+      error:  لم يتم العثور على موقع، من فضلك أدخل اسم الموقع ذاتيا.
     location_required: |
-      Bitte gib einen Ort an wo du nach einem Hilfsangebot suchen möchtest.
-    autocomplete_footer: Alle %{results} Suchergebnisse für '%{query}'
+      من فضلك أدخل اسم المكان الذي تريد أن تبحث فيه عن مساعدة
+    autocomplete_footer: كل %{نتائجfür '%{query}'
     map_info_window_multiple:
-      title: 'Mehrere Angebote'
-      text: 'Es wurden mehrere Ergebnisse für diesen Marker gefunden.'
-      anchor: 'Alle ansehen >>'
+      title: 'عروض أكثر'
+      text: 'تم العثور على العديد من النتائج لهذه الماركة'
+      anchor: 'مشاهدة الكل >>'
     cookie_warning_html: |
-      Cookies helfen uns beim Bereitstellen dieser Website. Durch das Nutzen der
-      Website erklären Sie sich einverstanden, dass wir Cookies setzen.
-      <a href="/datenschutzhinweise">Mehr</a>.
-    more_filter_options: 'Mehr Filter anzeigen'
-    less_filter_options: 'Weniger Filter anzeigen'
-    mobile_filter: 'Ergebnisse filtern'
+      الكوكيز تساعدنا على أن تظل صفحتنا متوفرة. من خلال استخدامك للصفحة فأنت تبين تفهمك لأننا وضعنا كوكيز
+      <a href="/ارشادات حماية البيانات">Mehr</a>.
+       نا كوكيز
+    more_filter_options: 'عرض فلاتر أكثر'
+    less_filter_options: 'عرض فلاتر أقل'
+    mobile_filter: 'تنقية النتائج'
     ajax_error:
-      error: "Suchfehler"
+      error: "خطأ في البحث"
       message: |
-        Tut uns leid, es ist ein Fehler bei der Suche aufgetreten. Wenn dieses
-        Problem wiederholt auftritt, kontaktiere uns bitte.
+        نأسف لحدوث خطأ في البحث. في حالة تكرار هذه المشكلة, اتصل بنا من فضلك
     query_field:
       placeholder_words:
-        - Adoption
-        - Drogen
-        - Gewalt
-        - Nachhilfe
-        - Notfall
-        - Recht
-        - Waise
-        - arbeitslos
-        - essen
-        - krank
-        - obdachlos
-        - rauchen
-        - schwanger
-        - schwul
-        - schwänzen
-        - wohnen
-      example_placeholder: "z.B. %{word}, …"
+        - تبني
+        - مخدرات
+        - عنف
+        - دروس خصوصية
+        - طوارئ
+        - قانون
+        - يتيم
+        - بطالة
+        - أكل
+        - مرض
+        - مشرد
+        - التدخين
+        - الحمل
+        - لوطي
+        - تهرب من المدرسة
+        - السكن
+      example_placeholder: "z.B. %{كلمة}, …"
 
     search:
-      form_more_label: "Suchoptionen einblenden"
-      form_less_label: "Suchoptionen ausblenden"
+      form_more_label: "عرض خيارات البحث"
+      form_less_label: "اخفاء خيارات البحث"
     search_results:
-      more: "Weitere Telefon- und Onlineangebote"
-      show_personal: "Zeige lokale Angebote"
-      bridge: "für"
-      enclosing: "gefunden"
-      faq_text: "Häufige Fragen und Antworten zur Suche findest du "
-      faq_anchor: "hier"
+      more: "عروض أخرى عن طريق التليفون أو الأنترنت"
+      show_personal: "عرض عروض مكانية أكثر"
+      bridge: "من أجل"
+      enclosing: "تم العثور على"
+      faq_text: "تجد الأسئلة الشائعة حول البحث وكذلك الإجابات "
+      faq_anchor: "هنا"
       map:
-        enlarge_map: "Karte vergrößern"
-        headline_small_map: "Angebote vor Ort auf der Karte"
+        enlarge_map: "تكبير الخريطة"
+        headline_small_map: "عروض محلية على الخريطة"
       personal_offers:
-        zero: "Leider keine Angebote"
-        one: "Ein Angebot vor Ort"
-        other: "%{count} Angebote vor Ort"
+        zero: "للأسف لا توجد عروض  "
+        one: "عرض محلي"
+        other: "%{count} عروض محلية"
       remote_offers:
-        zero: "Keine Telefonberatungen und Onlineangebote"
-        one: "Eine Telefonberatung oder ein Onlineangebot"
-        other: "%{count} Telefonberatungen und Onlineangebote"
+        zero: "لا توجد استشارات  هاتفية أو عروض مساعدة عن طريق الإنترنت"
+        one: " استشارة  هاتفية أو عرض مساعدة عن طريق الإنترنت"
+        other: "%{count} استشارات  هاتفية و عروض مساعدة عن طريق الإنترنت"
 
     categories_sidebar:
-      all_categories: "Alle Kategorien"
+      all_categories: "جميع الفئات"
     single_search_result:
       encounters:
-        personal: "Persönlich" #?
-        hotline: "Telefon"
-        email: "E-Mail"
-        chat: "Chat"
-        forum: "Forum"
-        online-course: "Online-Kurs"
-        list: "Adressliste"
+        personal: "ذاتيا" #?
+        hotline: "تليفون"
+        email: "بريد اليكتروني"
+        chat: "دردشة"
+        forum: "منتدى"
+        online-course: "دورة بالإنترنت"
+        list: "قائمة العناوين"
