--- a/config/locales/models/opening/ar.yml
+++ b/config/locales/models/opening/ar.yml
@@ -1,7 +1,7 @@
 ar:
   opening:
     display_string:
-      appointment: "nach Vereinbarung"
-      time_frame: "%{open} - %{close}"
-      time_format: "%H:%M Uhr"
-      midnight_exception: "24:00 Uhr"
+      appointment: "حسب الإتفاق"
+      time_frame: "%{فتح} - %غلق}"
+      time_format: "%H:%M ساعة"
+      midnight_exception: "24:00 ساعة"
