--- a/config/locales/models/opening/tr.yml
+++ b/config/locales/models/opening/tr.yml
@@ -1,7 +1,7 @@
 tr:
   opening:
     display_string:
-      appointment: "nach Vereinbarung"
+      appointment: "Sözleşilen vakit"
       time_frame: "%{open} - %{close}"
-      time_format: "%H:%M Uhr"
-      midnight_exception: "24:00 Uhr"
+      time_format: "%H:%M Saat"
+      midnight_exception: "Saat 24:00"
