--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1,84 +1,83 @@
 # Please see ./README.md for more information on I18n styles and structure.
 tr:
   conf: # translations used for app-internal things
-    current_location: 'Mein Standort'
+    current_location: 'Konumum'
     default_location: 'Berlin'
     default_latlng: '52.520007,13.404954'
 
   js: # translations used in JavaScript. I18n-JS forces them to be located here.
     geolocation:
-      get: Benutze meinen Standort!
-      waiting: Suche Standort... Möglicherweise musst du dies erst erlauben.
-      error: Standort konnte nicht gefunden werden. Bitte manuell eingeben.
+      get: Konumumu kullan!
+      waiting: Konumumu ara... Konumunun kullanılmasına izin vermelisin.
+      error: konumun bulunamamıştır. Lütfen manüel giriş yap.
     location_required: |
-      Bitte gib einen Ort an wo du nach einem Hilfsangebot suchen möchtest.
-    autocomplete_footer: Alle %{results} Suchergebnisse für '%{query}'
+      Lütfen destek almak istediğin yerin adını gir.
+    autocomplete_footer: Tüm %{results} sonuçlar '%{query}'
     map_info_window_multiple:
-      title: 'Mehrere Angebote'
-      text: 'Es wurden mehrere Ergebnisse für diesen Marker gefunden.'
-      anchor: 'Alle ansehen >>'
+      title: 'Birden fazla hizmet'
+      text: 'Bu konum için birden fazla sonuç bulundu.'
+      anchor: 'Tümüne göz at >>'
     cookie_warning_html: |
-      Cookies helfen uns beim Bereitstellen dieser Website. Durch das Nutzen der
-      Website erklären Sie sich einverstanden, dass wir Cookies setzen.
+      Cookieler bu sayfayı sana sunmamızda yardımcı oluyor. Web sitemizi kullanarak
+      bu cookieleri kullanmamıza izin vermektesin.
       <a href="/datenschutzhinweise">Mehr</a>.
-    more_filter_options: 'Mehr Filter anzeigen'
-    less_filter_options: 'Weniger Filter anzeigen'
-    mobile_filter: 'Ergebnisse filtern'
+    more_filter_options: 'Daha fazla filtre göster'
+    less_filter_options: 'Daha az filtre göster'
+    mobile_filter: 'Sonuçları filtrele'
     ajax_error:
-      error: "Suchfehler"
+      error: "Arama hatası"
       message: |
-        Tut uns leid, es ist ein Fehler bei der Suche aufgetreten. Wenn dieses
-        Problem wiederholt auftritt, kontaktiere uns bitte.
+        üzgünüz, arama da bir hata oluştu. bu hata tekrar oluşursa, bizimle irtibata geç.
     query_field:
       placeholder_words:
-        - Adoption
-        - Drogen
-        - Gewalt
-        - Nachhilfe
-        - Notfall
-        - Recht
-        - Waise
-        - arbeitslos
-        - essen
-        - krank
-        - obdachlos
-        - rauchen
-        - schwanger
-        - schwul
-        - schwänzen
-        - wohnen
-      example_placeholder: "z.B. %{word}, …"
+        - Evlat edinme
+        - Uyuşturucu
+        - Şiddet
+        - Özel ders
+        - Acil durum
+        - hukuk
+        - Öksüz
+        - İşsiz
+        - yemek yemek
+        - hasta
+        - evsiz
+        - sigara içmek
+        - hamile
+        - eş cinsel
+        - okulu asmak
+        - ikamet etmek
+      example_placeholder: "örneğin %{word}, …"
 
     search:
-      form_more_label: "Suchoptionen einblenden"
-      form_less_label: "Suchoptionen ausblenden"
+      form_more_label: "Arama tercihlerini göster"
+      form_less_label: "Arama tercihlerini kapat"
     search_results:
-      more: "Weitere Telefon- und Onlineangebote"
-      show_personal: "Zeige lokale Angebote"
-      bridge: "für"
-      enclosing: "gefunden"
-      faq_text: "Häufige Fragen und Antworten zur Suche findest du "
-      faq_anchor: "hier"
+      more: "Daha fazla telefon ve online hizmetler"
+      show_personal: "Yerel hizmetleri göster"
+      bridge: "için"
+      enclosing: "bulundu"
+      faq_text: "Sıkça sorulan soruları ve cevapları bulabilirsin "
+      faq_anchor: "burada"
       map:
-        enlarge_map: "Karte vergrößern"
-        headline_small_map: "Angebote vor Ort auf der Karte"
+        enlarge_map: "Haritayı büyüt"
+        headline_small_map: "Bulunduğum yerde sunulan hizmetleri haritada göster"
       personal_offers:
-        zero: "Leider keine Angebote"
-        one: "Ein Angebot vor Ort"
-        other: "%{count} Angebote vor Ort"
+        zero: "Maalesef hizmet bulunmamaktadır"
+        one: "Bulunduğun yerde bir hizmet"
+        other: "%{count} Bulunduğun yerde bir hizmet"
       remote_offers:
-        zero: "Keine Telefonberatungen und Onlineangebote"
-        one: "Eine Telefonberatung oder ein Onlineangebot"
-        other: "%{count} Telefonberatungen und Onlineangebote"
+        zero: "Telefon veya online hizmet bulunmamaktadır"
+        one: "Telefon ve online hizmetleri"
+        other: "%{count} Telefon ve online hizmetleri"
 
     categories_sidebar:
-      all_categories: "Alle Kategorien"
+      all_categories: "Tüm kategoriler"
     single_search_result:
       encounters:
-        personal: "Persönlich" #?
+        personal: "Kişisel" #?
         hotline: "Telefon"
         email: "E-Mail"
-        chat: "Chat"
+        chat: "Sohbet"
         forum: "Forum"
-        online-course: "Online-Kurs"
-        list: "Adressliste"
+        online-course: "Online kurs"
+        list: "Adres listesi"
