--- a/config/locales/views/emails/tr.yml
+++ b/config/locales/views/emails/tr.yml
@@ -2,10 +2,9 @@ tr:
   emails:
     subscribe:
       success_html: |
-        Du hast dich erfolgreich für Benachrichtigungen zu Angeboten mit deiner
-        Email-Adresse angemeldet.
-        (<a href="%{unsubscribe_href}">wieder abmelden</a>)
+        E-bülten aboneliğine başarıyla kayıt oldun.
+        (<a href="%{unsubscribe_href}">abonelikten çık</a>)
     unsubscribe:
       success_html: |
-        Du hast dich erfolgreich von weiteren Benachrichtigungen abgemeldet.
-        (<a href="%{subscribe_href}">wieder anmelden</a>)
+        E-bülten aboneliğinden başarıyla çıktın.
+        (<a href="%{subscribe_href}">tekrar abone ol</a>)
