--- a/config/locales/views/layouts/tr.yml
+++ b/config/locales/views/layouts/tr.yml
@@ -3,12 +3,12 @@ tr:
     partials:
       banner:
         teaser:
-          text: "clarat.org wird gerade aufgebaut"
-          refugees: "Bald auch Angebote für Flüchtlinge"
+          text: "clarat.org henüz yapım aşamasındadır"
+          refugees: "Yakında mülteciler için de hizmetlerimiz olacaktır"
           # TODO: Delete if beta banner changes permanently
-          link: "Hier erfährst du mehr"
+          link: "Burada daha fazla bilgi alabilirsin"
       nav_lang:
-        title: "Wähle deine Sprache"
+        title: "Dilini seç"
         languages:
           de: "Deutsch"
           en: "English"
@@ -20,26 +20,23 @@ tr:
       modal:
         beta_modal:
           text: |
-            Unsere Internetseite clarat.org ist noch ganz neu. Für Berlin kannst
-            du schon viele Hilfsangebote finden. Bald sammeln wir auch
-            Hilfsangebote für andere Städte. Über deine Hilfe freuen wir uns:
-            Hast du etwas gesehen, das wir besser machen können? Oder
-            funktioniert etwas nicht richtig? Dann
-          link: "schreibe uns einfach eine Nachricht."
+            clarat.org adlı internet sayfamız henüz yenidir. Yakında başka şehirler için de yardım çeşitleri sunabileceğiz.
+            Desteğinden ötürü mutlulu duyarız: Daha iyi yapabileceğimiz bir şey mi var? Ya da düzgün çalışmayan
+            bir şey? o halde
+          link: "bize mesaj gönder."
         unavailable_location_modal: |
-          Für deinen Standort gibt es bei clarat aktuell nur Telefon-Angebote
-          oder Online-Angebote. Das heißt, man hilft dir am Telefon oder online.
-          Zum Beispiel per E-Mail oder in einem Chat. Wir geben dir gerne
-          Bescheid, sobald es bei clarat auch Hilfe in deiner Nähe gibt.
-          Trage dazu deine E-Mail-Adresse hier ein.
+          Bulunduğun yer için clarat'ta şuan yalnızca telefon desteği ya da online yardımlar bulunmaktadır.
+          Yani sana telefonda ya da online olarak yardım edilecektir.
+          Mesela E-Mail yolu ve ya online sohbette yardım edilecektir. Bulunduğun yerde de yardım alabildiğinde, seni
+          memnuniyetle bilgilendireceğiz. Bunun için E-Mail adresini buraya yazabilirsin.
       navigation:
         claim:
-          main: "Einfach Hilfe finden"
+          main: "Yardım bul"
           family: |
-            Unterstützungsangebote für Kinder, Jugendliche und Familien
+            Çocuklar, gençler ve aileler için yardıum çeşitleri
           refugees: |
-            Unterstützungsangebote für Flüchtlinge
-        category_headline: "Oder suche nach Kategorien"
+            Mülteciler için yardım çeşitleri
+        category_headline: "Kategoriler arasında ara"
       footer:
         gplus:
           anchor: "Google+"
@@ -50,10 +47,10 @@ tr:
         fb:
           anchor: "Facebook"
           href: "https://www.facebook.com/claratpunktorg"
-        about: "Über uns"
-        faq: "Häufige Fragen"
-        contact: "Kontakt"
+        about: "Hakkımızda"
+        faq: "Sıkça sorulan sorular"
+        contact: "İletişim"
         blog: "Blog"
-        impressum: "Impressum"
-        tos: "Rechtliche Hinweise"
-        privacy: "Datenschutzhinweise"
+        impressum: "Künye"
+        tos: "Hukuki Uyarılar"
+        privacy: "Gizlilik Politikası"
