--- a/config/locales/views/offers/tr.yml
+++ b/config/locales/views/offers/tr.yml
@@ -2,156 +2,155 @@ tr:
   offers:
     shared:
       search_form:
-        loc_label: "Wo"
+        loc_label: "Nerede"
         loc_placeholder:
-          long: "Adresse, Stadtteil, Stadt oder PLZ"
-          short: "Stadt, PLZ, …"
-        query_label: "Was"
+          long: "Adres, İlçe, Semt veya posta kodu"
+          short: "İl, posta kodu, …"
+        query_label: "Ne"
         query_placeholder:
-          long: "Angebote zum Thema …"
-          short: "Angebote zu …"
-        button: "Suchen"
+          long: "… konu ile ilgili yardımlar"
+          short: "… ile ilgili yardımlar"
+        button: "Arama"
 
     invalid_location:
-      title: "Leider konnten wir den von dir eingegeben Standort nicht finden"
+      title: "Aramış olduğun yeri maalesef bulumadık."
       text: |
-        Bitte überprüfe noch mal die von dir eingegebenen Adressdaten und
-        versuche gegebenenfalls mit einer alternativen Eingabe
-        (z.B. "Postleitzahl Ort").
+        Girmiş olduğun adres bilgilerini başka bir şekilde arat.
+        (örneğin "Posta kodu ilçe").
 
     index:
       noscript_warning: |
-        Tut uns leid, aber um unsere Suche benutzen zu können, musst dein
-        Browser JavaScript aktiviert haben.
+        Üzgünüz, ancak aramanı gerçekleştirebilmen için internet brwoserinde
+        JavaScript aktif olmalıdır.
 
       # index partials
       pending_ajax:
-        searching: "Suche…"
+        searching: "Arama…"
 
       filters:
         json:
           age:
-            zero: "< 1 Jahr"
-            one: "1 Jahr"
-            other: "%{count} Jahre"
+            zero: "< 1 sene"
+            one: "1 sene"
+            other: "%{count} seneler"
           target_audience:
-            children: "für Kinder und Jugendliche"
-            parents: "für Eltern"
-            nuclear_family: "für Familien"
-            acquaintances: "für Bekannte und Verwandte"
-            pregnant_woman: "für Schwangere"
+            children: "Çocuklar ve gençler için"
+            parents: "Ebeveynler için"
+            nuclear_family: "Aileler için"
+            acquaintances: "Tanıdık ve akrabalar için"
+            pregnant_woman: "Hamileler için"
           exclusive_gender:
-            boys_only: "nur für Jungen und Männer"
-            girls_only: "nur für Mädchen und Frauen"
+            boys_only: "Yalnızca erkekler için"
+            girls_only: "Yalnızca bayanlar için"
           language:
-            deu: "Deutsch"
-            eng: "Englisch"
-            tur: "Türkisch"
+            deu: "Almanca"
+            eng: "İngilizce"
+            tur: "Türkçe"
             tha: "Thai"
-            bul: "Bulgarisch"
-            ron: "Rumänisch"
-            sqi: "Albanisch"
-            ara: "Arabisch"
-            fra: "Französisch"
-            kur: "Kurdisch"
-            rus: "Russisch"
-            srp: "Serbisch"
-            amh: "Amharisch"
-            bos: "Bosnisch"
-            ita: "Italienisch"
-            hrv: "Kroatisch"
-            pol: "Polnisch"
-            por: "Portugiesisch"
-            vie: "Vietnamesisch"
+            bul: "Bulgarca"
+            ron: "Romence"
+            sqi: "Arnavutça"
+            ara: "Arapça"
+            fra: "Fransızca"
+            kur: "Kürtçe"
+            rus: "Rusça"
+            srp: "Sırpça"
+            amh: "Amharca"
+            bos: "Boşnakça"
+            ita: "Italyanca"
+            hrv: "Hırvatça"
+            pol: "Lehçe"
+            por: "Portekizce"
+            vie: "Vietnam"
             wol: "Wolof"
-            fas: "Persisch (Farsi)"
-            ben: "Bengalisch"
-            spa: "Spanisch"
+            fas: "Farsça (Farsi)"
+            ben: "Bengal"
+            spa: "İspanyolca"
             tam: "Tamil"
-            urd: "Urdu"
-            mul: "weitere Sprachen auf Anfrage"
-            aze: "Aserbaidschanisch"
-            ell: "Griechisch"
-            hin: "Hindi"
-            mkd: "Mazedonisch"
-            rom: "Romanes"
-            hun: "Ungarisch"
-            "568": "Niederländisch"
-            "326": "Ukrainisch"
+            urd: "Urduca"
+            mul: "Talep üzerine başka dil"
+            aze: "Azerice"
+            ell: "Yunanca"
+            hin: "Hintçe"
+            mkd: "Makedonca"
+            rom: "Romanca"
+            hun: "Marcarca"
+            "568": "Flemence"
+            "326": "Ukraynaca"
             "639": "Dari"
-            "150": "Deutsche Gebärdensprache"
-            lav: "Lettisch"
-            lit: "Litauisch"
+            "150": "Alman işaret dili"
+            lav: "Letonyaca"
+            lit: "Litvanyaca"
             kik: "Kikuyu"
-            zho: "Chinesisch"
+            zho: "Çince"
             swa: "Kiswahili"
             luo: "Luo"
-            ltz: "Luxemburgisch"
-            nor: "Norwegisch"
-            swe: "Schwedisch"
+            ltz: "Lüksemburgca"
+            nor: "Norveççe"
+            swe: "İsveççe"
             snk: "Soninke"
-            tgk: "Tadschikisch"
-            tel: "Telugu"
-            tuk: "Turkmenisch"
-            uzb: "Usbekisch"
-            bel: "Weißrussisch"
+            tgk: "Tacikçe"
+            tel: "Telugu Dili"
+            tuk: "Turkmence"
+            uzb: "Özbekçe"
+            bel: "Beyaz Rusça"
             zza: "Zaza"
           contact_type:
-            personal: "vor Ort"
-            remote: "telefonisch oder online"
+            personal: "bulunulan yerde"
+            remote: "telefon ile veya online"
           encounter:
             hotline: "Telefon"
             email: "E-Mail"
-            chat: "Chat"
+            chat: Sohbet
             forum: "Forum"
-            online-course: "Online-Kurs"
-            portal: "Adressliste"
+            online-course: "Online kurs"
+            portal: "Adres listesi"
 
       map_sidebar:
-        map_output_searchresults: Kartenausgabe der Suchergebnisse
+        map_output_searchresults: Aramalarını haritaya dök
 
       # /index partials
 
     show:
-      what: "Worum geht's?"
-      next_steps: "Was musst du tun?"
-      who: "Wo gibt’s die Hilfe?"
-      last_updated: "Eintrag zuletzt bearbeitet am"
+      what: "Konu nedir?"
+      next_steps: "Ne yapman gerekli?"
+      who: "Nerede yardım bulabilirim?"
+      last_updated: "Son kayıt düzenleme tarihi"
 
       # show partials
       opening_section:
-        heading: "Wann kannst du das machen?"
+        heading: "Ne zaman yapabilirsin?"
         days:
-          mon: Montag
-          tue: Dienstag
-          wed: Mittwoch
-          thu: Donnerstag
-          fri: Freitag
-          sat: Samstag
-          sun: Sonntag
+          mon: Pazartesi
+          tue: Salı
+          wed: Çarşamba
+          thu: Perşembe
+          fri: Cuma
+          sat: Cumartesi
+          sun: Pazar
       website_section:
-        internet_presence: "Wo erfährst du mehr im Netz?"
+        internet_presence: "İnternette nerede daha fazla bilgi bulabilirim?"
         websites:
-          own: "Webseite"
-          document: "Weitere Infos"
+          own: "Web Sitesi"
+          document: "Daha fazla bilgi al"
           facebook: "Facebook"
           twitter: "Twitter"
           youtube: "Youtube"
           gplus: "Google+"
           pinterest: "Pinterest"
       who_contact_people:
-        female: "Frau"
-        male: "Herr"
+        female: "Bayan"
+        male: "Bay"
         dr: "Dr."
         prof_dr: "Prof. Dr."
         phone: "Telefon: "
-        fax: "Fax: "
+        fax: "Faks: "
         email: "E-Mail: "
         obfuscated_email: |
-          Diese E-Mail-Adresse wird zum Spam-Schutz durch JavaScript
-          verschlüsselt. Bitte aktiviere JavaScript um sie lesen zu können.
+          Bu E-Mail adresi spam koruma adına JavaScript ile
+          şifrelenmiştir. Okumak için JavaScript aktifleştir.
       who_section:
-        heading: "Wo kannst du dich melden?"
+        heading: "Nereye başvurabilirsin?"
       who_location:
-        organizations: 'Ein Angebot von:'
+        organizations: 'bir ... hizmetidir:'
       # /show partials
