--- a/config/locales/views/shareds/tr.yml
+++ b/config/locales/views/shareds/tr.yml
@@ -1,11 +1,11 @@
 tr:
   shareds:
     forms:
-      fill_field: "Bitte fülle dieses Feld aus"
+      fill_field: "Lütfen bu alanı doldur"
     show:
       cta_report_errors: |
-        Hast du einen Fehler entdeckt?
+        Hata mı gördün?
       google_translate_explanation: |
-        Diese Übersetzung wurde von Google Translate automatisch gemacht.
-        Da gibt es oft sprachliche Fehler. Es kann also sein, dass etwas komisch
-        klingt. Schau dann lieber noch einmal in den deutschen Text.
+        Bu çeviri otomatik olarak Google Translate tarafından gerçekleştirilmiştir.
+        Bu nedenle hatalar oluşabilmektedir. Yani bazı cümleler tuhaf olabilir.
+        Bu gibi durumlarda Almanca metne bakman daha doğru olacaktır.
