small changes for better translations

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -46,7 +46,7 @@ ar:
         - لوطي
         - تهرب من المدرسة
         - السكن
-      example_placeholder: "z.B. %{كلمة}, …"
+      example_placeholder: "… ؛%{word} مثلا"
 
     search:
       form_more_label: "عرض خيارات البحث"
@@ -64,11 +64,11 @@ ar:
       personal_offers:
         zero: "للأسف لا توجد عروض  "
         one: "عرض محلي"
-        other: "%{count} عروض محلية"
+        other: "عروض محلية %{count}"
       remote_offers:
         zero: "لا توجد استشارات  هاتفية أو عروض مساعدة عن طريق الإنترنت"
-        one: " استشارة  هاتفية أو عرض مساعدة عن طريق الإنترنت"
-        other: "%{count} استشارات  هاتفية و عروض مساعدة عن طريق الإنترنت"
+        one: "استشارة هاتفية أو عرض مساعدة واحد عن طريق الإنترنت"
+        other: "%{count} :إستشارات هاتفية أو عروض عن طريق الإنترنت عددها"
 
     categories_sidebar:
       all_categories: "جميع الفئات"
