--- a/config/locales/views/offers/pl.yml
+++ b/config/locales/views/offers/pl.yml
@@ -33,7 +33,7 @@ pl:
           age:
             zero: "< 1 Jahr"
             one: "1 Jahr"
-            few: "%{count} years"
+            few: "%{count} Jahre"
             other: "%{count} Jahre"
           target_audience:
             children: "für Kinder und Jugendliche"
