clarat-org/clarat#649 basic functionality
TODO: discuss where to put the separation logic

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -40,6 +40,20 @@ de:
             nuclear_family: "für Familien"
             acquaintances: "für Bekannte und Verwandte"
             pregnant_woman: "für Schwangere"
+            everyone: "für Alle"
+            refugees_general: "für Flüchtlinge"
+            refugees_children: "für geflüchtete Kinder"
+            refugees_adolescents: "für geflüchtete Jugendliche"
+            refugees_children_and_adolescents: "für geflüchtete Kinder und Jugendliche"
+            refugees_umf: "für unbegleitete minderjährige Flüchtlinge"
+            refugees_ujf: "für unbegleitete junge Flüchtlinge"
+            refugees_families: "für geflüchtete Familien"
+            refugees_pre_asylum_procedure: "für Flüchtlinge vor dem Asylantrag"
+            refugees_asylum_procedure: "für Flüchtlinge im Asylverfahren"
+            refugees_deportation_decision: "für Flüchtlinge mit Abschiebebescheid"
+            refugees_toleration_decision: "für Flüchtlinge mit Duldung"
+            refugees_residence_permit: "für Flüchtlinge mit Aufenthaltserlaubnis"
+            refugees_registered: "für registrierte Flüchtlinge"
           exclusive_gender:
             boys_only: "nur für Jungen und Männer"
             girls_only: "nur für Mädchen und Frauen"
